# monday-for-agents

./: .env.example  .gitignore  Dockerfile.agent  Makefile  README.md  docker-compose.yaml  pyproject.toml
agents/: developer.yaml  product-owner.yaml  reviewer.yaml  scrum-master.yaml
docs/: SETUP-GUIDE.md  architecture-diagram.html
tests/: conftest.py
tests/e2e/: test_full_workflow.py
tests/evals/: conftest.py  eval_utils.py  test_developer_evals.py  test_po_evals.py  test_reviewer_evals.py  test_scrum_master_evals.py
tests/integration/: test_a2a_integration.py  test_mcp_integration.py  test_multi_agent.py
tests/unit/a2a_server/: test_a2a_bridge_mcp.py  test_agent_executor.py  test_agent_loader.py  test_auth_middleware.py  test_claude_code_executor.py  test_claude_code_tool.py  test_doctor_command.py  test_graph.py  test_health.py  test_mcp_config.py  test_models.py  test_rate_limit.py  test_registry.py  test_resilience.py  test_review_pr_tool.py  test_security_middleware.py  test_server.py  test_status_command.py  test_tracing.py  test_validate_command.py
tests/unit/google_calendar_mcp/: test_events.py  test_server.py
tests/unit/google_drive_mcp/: test_files.py  test_server.py
tests/unit/monday_mcp/: test_boards.py  test_client.py  test_items.py  test_server.py  test_subitems.py  test_updates.py
tests/unit/monday_sync/: test_health.py  test_monday_client.py  test_sync.py  test_validate.py
