[project]
name = "monday-for-agents"
version = "0.1.0"
description = "AI agent team that collaborates via Monday.com, A2A, and LangGraph"
requires-python = ">=3.11"
dependencies = [
    "mfa-a2a-server",
    "mfa-monday-mcp",
    "mfa-monday-sync",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
    "respx>=0.21",
    "httpx>=0.27",
    "pytest-mock>=3.14",
    "deepeval>=1.0",
    "langsmith>=0.1",
]

[tool.uv.workspace]
members = [
    "packages/a2a-server",
    "packages/monday-mcp",
    "packages/monday-sync",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may use local services)",
    "e2e: End-to-end tests (full system)",
    "eval: LLM evaluation tests (require API keys)",
    "slow: Slow tests (>10s)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
timeout = 30

[tool.coverage.run]
source = [
    "packages/monday-mcp/src",
    "packages/a2a-server/src",
    "packages/monday-sync/src",
]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
